Modified image source line.

--- a/custom/style.css
+++ b/custom/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('homework1.jpg');
+	background-image: url('img/homework1.jpg');
 	background-size: cover;
 	background-repeat: none;
 }
